Updated artcile--added. New Why Buy jump on bouncyball.html. Other minor text changes.

--- a/bouncyball.html
+++ b/bouncyball.html
@@ -355,6 +355,11 @@
 							<button class="token-button"><a href="https://www.coingecko.com/en/coins/bouncy-ball-of-ofid-fun" target="_blank">CoinGecko</a></button>
 							<button class="token-button"><a href="https://coinranking.com/coin/h0ynh5w7U+bouncyballofofidfun-epb" target="_blank">CoinRanking</a></button>
 							<button class="token-button"><a href="https://solscan.io/token/GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump" target="_blank">Solscan</a></button>
+
+							<footer class="token-button-help-text">
+							<p class="align-center">
+								<a href="#guide" target="_blank">💡 Why Buy?</a></p>
+							</footer>
 						</div>
 					</section>
 					
