--- a/explore.html
+++ b/explore.html
@@ -375,10 +375,10 @@
 						<p>Check out our <b>Featured Article</b> or keep scrolling to explore more content in our library!
 						</p>
 					</header>
-					<a href="https://ofidcrypt.ca/ep-learn-what-is-solana" class="image fit"><img
-							src="assets/images/pic11.png" alt="Article Title: What is Solana?" /></a>
+					<a href="https://ofidcrypt.ca/why-crypto-prices-go-up-and-why-its-not-magic" class="image fit"><img
+							src="assets/images/article-cover-06.jpg" alt="Article Title: Why Crypto Prices Go Up" /></a>
 					<ul class="actions special">
-						<li><a href="https://ofidcrypt.ca/ep-learn-what-is-solana" class="button large">View Article</a>
+						<li><a href="https://ofidcrypt.ca/why-crypto-prices-go-up-and-why-its-not-magic" class="button large">View Article</a>
 						</li>
 					</ul>
 				</article>
