--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 
 								<!-- DESCRIPTION -->
 								<div class="quick-start-content">
-									<h3 class="quick-start-title">E𝕏pand With</br>Web3+</h3>
+									<h3 class="quick-start-title">E𝕏pand With </br>Web3+</h3>
 									<p class="align-center">Try Apps · Grow Your Business · Earn Rewards</p>
 									<button class="round-button"><a href="/explore.html">Explore Now</a></button>
 								</div>
@@ -421,12 +421,12 @@
 							</div>
 						</article>
 						<article class="quick-start-item"> <span class="image left"><img
-									src="/assets/images/expb-ball02.GIF" alt="e𝕏PB Icon"></span>
+									src="/assets/images/expb-ball03.GIF" alt="e𝕏PB Icon"></span>
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Get Bouncy Ball</h3>
-								<p class="align-center">e𝕏PB · On Solana <br />
-									In Your Wallet</p>
-								<button class="round-button"><a href="/bouncyball.html">Token Page</a></button>
+								<p class="align-center">Spend Less · Grow More <br />
+									A New Portfpolio</p>
+								<button class="round-button"><a href="/bouncyball.html#buy-expb">Token Page</a></button>
 							</div>
 						</article>
 						<article class="quick-start-item"> <span class="image left"><img
