--- a/posts-page2.html
+++ b/posts-page2.html
@@ -18,14 +18,14 @@
 
             <article>
                 <header>
-                    <span class="date">February 29, 2104</span>
-                    <h2><a href="https://www.ofidcrypt.com/explore#article-featured">More Articles<br /> Coming soon</a></h2>
+                    <span class="date">August 4, 2025</span>
+                    <h2><a href="https://ofidcrypt.ca/why-crypto-prices-go-up-and-why-its-not-magic">06 Why Crypto Prices Go Up,<br /> and Why It's Not Magic</a></h2>
                 </header>
-                <a href="https://www.ofidcrypt.com/explore#article-featured" class="image fit"><img src="assets/images/article-cover-coming-soon.PNG" alt="" /></a>
-                <p>"Exploring additional topics brings even more insights and perspectives..."</p>
+                <a href="https://ofidcrypt.ca/why-crypto-prices-go-up-and-why-its-not-magic" class="image fit"><img src="assets/images/article-cover-06.jpg" alt="" /></a>
+                <p>Learn about price movements, how they reflect the redistribution of money—and why that matters for the future of finance.</p>
                 <ul class="actions special">
-                    <li><a href="https://www.ofidcrypt.com/explore#article-featured"
-                        class="button">See Featured</a></li>
+                    <li><a href="https://ofidcrypt.ca/why-crypto-prices-go-up-and-why-its-not-magic"
+                        class="button">View Article</a></li>
                 </ul>
             </article>
 
