Fix GIF name for loading on index.html and text spelling correction.

--- a/index.html
+++ b/index.html
@@ -421,11 +421,11 @@
 							</div>
 						</article>
 						<article class="quick-start-item"> <span class="image left"><img
-									src="/assets/images/expb-ball03.GIF" alt="e𝕏PB Icon"></span>
+									src="/assets/images/expb-ball03.gif" alt="e𝕏PB Icon"></span>
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Get Bouncy Ball</h3>
 								<p class="align-center">Spend Less · Grow More <br />
-									A New Portfpolio</p>
+									A New Portfolio</p>
 								<button class="round-button"><a href="/bouncyball.html#buy-expb">Token Page</a></button>
 							</div>
 						</article>
