--- a/pages/about.html
+++ b/pages/about.html
@@ -466,7 +466,7 @@
 			
 							<!-- Section 2 - Right Image -->
 							<a href="affiliate.html">
-								<span class="image right"><img src="../assets/images/ofid-exp-partners.jpg"
+								<span class="image right"><img src="../assets/images/IMG_8887.jpeg"
 										alt="Partnerships Tile"></span>
 							</a>
 							<p><b>We form relationships and strategic alliances</b>—including affiliate partnerships, tech partners,
