Adjust viewport iframe for PRLog on community.html

--- a/community.html
+++ b/community.html
@@ -172,11 +172,13 @@
 				</header>
 
 				<!-- PRLog: Releases -->
-				<div class="x-post-container" id="PR">
-					<div class="x-post video main">
-						<iframe
-							src="https://www.prlog.org/13097941-giddys-launches-family-safe-product-line-on-amazon-unlocking-discounts-with-bouncy-ball-tokens.html?embed"
-							width="700px" height="600px" frameborder="1"></iframe>
+				<div class="PR-container" id="PR">
+					<div class="PR-post video main">
+						<div class="iframe-wrapper">
+							<iframe
+								src="https://www.prlog.org/13097941-giddys-launches-family-safe-product-line-on-amazon-unlocking-discounts-with-bouncy-ball-tokens.html?embed"
+								frameborder="1"></iframe>
+						</div>
 					</div>
 				</div>
 
