Updated page logo for bouncyball.html and ofidtales.html.

--- a/bouncyball.html
+++ b/bouncyball.html
@@ -90,7 +90,7 @@
 		<!-- Header Subpage-->
 		<header class="header-subpage">
 			<a href="/index.html">
-				<img src="/assets/images/ofid-expb-logo.png" alt="OFiDCrypt Logo" class="logo">
+				<img src="/assets/images/bouncy-ball-500.png" alt="Bouncy Ball Logo" class="logo">
 			</a>
 		</header>
 
