--- a/ofidtales.html
+++ b/ofidtales.html
@@ -90,7 +90,7 @@
 		<!-- Header Subpage-->
 		<header class="header-subpage">
 			<a href="/index.html">
-				<img src="/assets/images/giddy-tales-logo-02.png" alt="OFiD Tales Logo" class="logo">
+				<img src="/assets/images/giddys-universe-logo.PNG" alt="OFiD Tales Logo" class="logo">
 			</a>
 		</header>
 
