Updated assets on ofidkid.html and ofidtales.html. Removed baby-tokin real pictures. Updated text and added YouTube link accross paged to header and footer navigation.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		<!-- Intro -->
 		<div id="intro">
 			<h1 class="left-aligned">
-				<span class="smaller-heading">Bouncy Ball<br />Presents</span><br />
+				<span class="smaller-heading">Bouncy Ball<br />Presented By</span><br />
 				OF<span class="i">i</span>DCrypt<br />
 				Marketing
 			</h1>
@@ -166,6 +166,9 @@
 					</a>
 				</li>
 				<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a>
+				</li>
+				<li><a href="https://youtube.com/@OFiDCrypt" class="icon brands fa-youtube"><span
+							class="label">YouTube</span></a>
 				</li>
 				<li><a href="https://www.tiktok.com/@Giddys_CA" class="icon brands alt fa-tiktok"><span
 							class="label">TikTok</span></a></li>
@@ -357,7 +360,8 @@
 								<!-- DESCRIPTION -->
 								<div class="quick-start-content">
 									<h3 class="quick-start-title">Giddy's Universe</h3>
-									<p class="align-center">Family Goods · Kids Toys · Collectibles · Animated Series</p>
+									<p class="align-center">Family Goods · Kids Toys · Collectibles · Animated Series
+									</p>
 									<button class="round-button"><a href="/ofidtales.html">Watch & Shop</a></button>
 								</div>
 							</article>
@@ -383,8 +387,10 @@
 								<!-- DESCRIPTION -->
 								<div class="quick-start-content">
 									<h3 class="quick-start-title">Learn About Digital Assets</h3>
-									<p class="align-center">Fundamentals · Basics · Tips · Portfolio Growth · Security</p>
-									<button class="round-button"><a href="/explore.html#article-featured">Go to Articles</a></button>
+									<p class="align-center">Fundamentals · Basics · Tips · Portfolio Growth · Security
+									</p>
+									<button class="round-button"><a href="/explore.html#article-featured">Go to
+											Articles</a></button>
 								</div>
 							</article>
 						</div>
@@ -424,8 +430,7 @@
 									src="/assets/images/expb-ball03.gif" alt="e𝕏PB Icon"></span>
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Get Bouncy Ball</h3>
-								<p class="align-center">Spend Less · Grow More <br />
-									A New Portfolio</p>
+								<p class="align-center">Spend Less · Grow More · A New Portfolio</p>
 								<button class="round-button"><a href="/bouncyball.html#buy-expb">Token Page</a></button>
 							</div>
 						</article>
@@ -434,14 +439,16 @@
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Open Your Account</h3>
 								<p class="align-center">Payward Inc · Buy · Sell · Swap · Earn</p> <button
-									class="round-button"><a href="/pages/affiliate.html#kraken">Sign Up Free</a></button>
+									class="round-button"><a href="/pages/affiliate.html#kraken">Sign Up
+										Free</a></button>
 							</div>
 						</article>
 					</div>
 
 					<!-- Quick Start: Featured -->
 					<article class="quick-start-item quick-start-featured">
-						<span class="image left"><img src="/assets/images/giddys-ofid-x-spaces.png" alt="Featured Icon"></span>
+						<span class="image left"><img src="/assets/images/giddys-ofid-x-spaces.png"
+								alt="Featured Icon"></span>
 						<div class="quick-start-content">
 							<h3 class="quick-start-title">𝕏 Community</br>Live Spaces</br>🎙</h3>
 							<p class="align-center">News · Updates · Airdrops · Rewards</p> <button
@@ -643,6 +650,9 @@
 					<ul class="icons alt">
 						<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span
 									class="label">X</span></a></li>
+						<li><a href="https://youtube.com/@OFiDCrypt" class="icon brands fa-youtube"><span
+									class="label">YouTube</span></a>
+						</li>
 						<li><a href="https://www.tiktok.com/@Giddys_CA" class="icon brands alt fa-tiktok"><span
 									class="label">TikTok</span></a></li>
 						<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span
