Fixed path for ofidkid.html header logo.

--- a/ofidkid.html
+++ b/ofidkid.html
@@ -90,7 +90,7 @@
 		<!-- Header Subpage-->
 		<header class="header-subpage">
 			<a href="/index.html">
-				<img src="/assets/images/baby-tokin-logo.png" alt="Baby Tokin Logo" class="logo">
+				<img src="/assets/images/baby-tokin-logo.PNG" alt="Baby Tokin Logo" class="logo">
 			</a>
 		</header>
 
