Multiple visual changes and SEO adaptations accross pages. Reworkedofidtales.html with new graphics and layout modules--adapted text flow on index.html. Added YouTube iFrame to ofidtales.html and moved Community Spaces widget from index.html to livestream.html. Added new Giddy's Video Contenmt ands moved LEGACY videos to ofidkid.html.

--- a/explore.html
+++ b/explore.html
@@ -33,7 +33,7 @@
 		</script>
 
 	<!-- Meta Description (for SEO) -->
-	<title>OFiDCrypt | Web3 Discovery Apps & Services</title>
+	<title>OFiDCrypt | Stories, Apps & Shop</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="description"
@@ -42,7 +42,7 @@
 	<meta name="author" content="Tokin ⬢">
 
 	<!-- Open Graph Meta Tags -->
-	<meta property="og:title" content="OFiDCrypt | Web3 Discovery Apps & Services">
+	<meta property="og:title" content="OFiDCrypt | Stories, Apps & Shop ">
 	<meta property="og:description"
 		content="Explore Web3 in this exciting hub of leading applications by top developers in the space! Try new experiences and become empowered by the privacy and freedom of decentralized services.">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofidcrypt-marketing.webp">
@@ -51,7 +51,7 @@
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="OFiDCrypt | Web3 Discovery Apps & Services">
+	<meta name="twitter:title" content="OFiDCrypt | Stories, Apps & Shop ">
 	<meta name="twitter:description"
 		content="Explore Web3 in this exciting hub of leading applications by top developers in the space! Try new experiences and become empowered by the privacy and freedom of decentralized services.">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofidcrypt-marketing.webp">
@@ -111,8 +111,8 @@
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
 				<li class="active"><a href="explore.html">Services</a></li>
-				<li><a href="community.html">News & Blog</a></li>
-				<li><a href="pages/livestream.html">𝕏 Live Spaces</a></li>
+				<li><a href="community.html">News</a></li>
+				<li><a href="pages/livestream.html">Events</a></li>
 				<li><a href="ofidtales.html">Giddy's</a></li>
 				<li><a href="pages/about.html">About Us</a></li>
 			</ul>
