--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 			<ul class="links">
 				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="explore.html">Services</a></li>
-				<li><a href="community.html">News & Blog</a></li>
-				<li><a href="pages/livestream.html">𝕏 Live Spaces</a></li>
+				<li><a href="community.html">News</a></li>
+				<li><a href="pages/livestream.html">Events</a></li>
 				<li><a href="ofidtales.html">Giddy's</a></li>
 				<li><a href="pages/about.html">About Us</a></li>
 			</ul>
@@ -402,60 +402,64 @@
 					<header id="jump-ahead">
 						<h2>Get Web3+ Enabled! Spend Less & Grow More</h2>
 
-						<p>OFiDCrypt is one of the first of its kind—where innovation meets affordability.
-							Unlock exclusive savings on our marketing services and Giddy’s Goods when you set up your
+						<p>OFiDCrypt is one of the first of its kind—<b>where innovation meets affordability</b>—
+							unlock exclusive savings on our marketing services and Giddy’s Goods when you set up your
 							first digital
 							wallet. Dive into our secure, in-house digital currency and experience the future of smart
 							spending.</p>
 
+						<p class="align-center">Need Help? </br><a href="#guide">Check Our Guides</a></p>
+
 						<p style="text-align: center;">
-							You only need two things—and they’re both free!
-							A Wallet (think of it like a banking app), and an Exchange account (kind of like a crypto
-							bank account).
+							You only need <b>one thing</b>—and it's quick and free!
+							A wallet (think of it like a banking app). Optionally, we can help to get you started with
+							an exchange account (kind of like a crypto
+							bank account)—you'll need this when you want to cash out!
 							That’s it! You’re ready to easily swap your dollars for your first digital asset—just like
 							exchanging money for a vacation abroad!
 						</p>
 					</header>
 
 					<div class="quick-start-items">
-						<article class="quick-start-item"> <span class="image left"><img
-									src="/assets/images/300x300-phantom.png" alt="Wallet Icon"></span>
+						<article class="quick-start-item">
+							<span class="image left">
+								<img src="/assets/images/300x300-phantom.png" alt="Wallet Icon">
+							</span>
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Get your Wallet</h3>
-								<p class="align-center">By Phantom Technologies Inc · Buy · Swap</p> <button
-									class="round-button"><a href="https://phantom.com/download">Download</a></button>
+								<p class="align-center">By Phantom Technologies Inc · Buy · Swap</p>
+								<button class="round-button">
+									<a href="https://phantom.com/download">Download</a>
+								</button>
 							</div>
 						</article>
-						<article class="quick-start-item"> <span class="image left"><img
-									src="/assets/images/expb-ball03.gif" alt="e𝕏PB Icon"></span>
+
+						<article class="quick-start-item">
+							<span class="image left">
+								<img src="/assets/images/expb-ball03.gif" alt="e𝕏PB Icon">
+							</span>
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Get Bouncy Ball</h3>
 								<p class="align-center">Spend Less · Grow More · A New Portfolio</p>
-								<button class="round-button"><a href="/bouncyball.html#buy-expb">Token Page</a></button>
+								<button class="round-button">
+									<a href="/bouncyball.html#buy-expb">Token Page</a>
+								</button>
 							</div>
 						</article>
-						<article class="quick-start-item"> <span class="image left"><img
-									src="/assets/images/partner-affiliate-kraken.png" alt="Learn Icon"></span>
+
+						<article class="quick-start-item">
+							<span class="image left">
+								<img src="/assets/images/partner-affiliate-kraken.png" alt="Learn Icon">
+							</span>
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Open Your Account</h3>
-								<p class="align-center">Payward Inc · Buy · Sell · Swap · Earn</p> <button
-									class="round-button"><a href="/pages/affiliate.html#kraken">Sign Up
-										Free</a></button>
+								<p class="align-center">Payward Inc · Buy · Sell · Swap · Earn</p>
+								<button class="round-button">
+									<a href="/pages/affiliate.html#kraken">Sign Up Free</a>
+								</button>
 							</div>
 						</article>
 					</div>
-
-					<!-- Quick Start: Featured -->
-					<article class="quick-start-item quick-start-featured">
-						<span class="image left"><img src="/assets/images/giddys-ofid-x-spaces.png"
-								alt="Featured Icon"></span>
-						<div class="quick-start-content">
-							<h3 class="quick-start-title">𝕏 Community</br>Live Spaces</br>🎙</h3>
-							<p class="align-center">News · Updates · Airdrops · Rewards</p> <button
-								class="round-button"><a href="https://x.com/i/communities/1882320194288373975">Learn
-									More</a></button>
-						</div>
-					</article>
 				</section>
 
 				<header id="guide">
