--- a/ofidkid.html
+++ b/ofidkid.html
@@ -33,24 +33,24 @@
 		</script>
 
 	<!-- Meta Description (for SEO) -->
-	<title>OFiDCrypt | Meet The OFiD Kid & Crew</title>
+	<title>OFiDCrypt | Giddy's: Meet Baby Tokin</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<meta name="description" content="Meet The OFiD Kid and explore the world with him! Get ready to join him on his Web3 adventures!">
-	<meta name="keywords" content="cryptocurrency, The OFiD Kid, The OFiD Crew, Buster, Giddy, blockchain, digital assets, OFiDCrypt, crypto community">
+	<meta name="description" content="Meet Baby Tokim and explore the world with him! Get ready to join him on his Web3 adventures!">
+	<meta name="keywords" content="cryptocurrency, Baby Tokin, The OFiD Crew, Buster, Giddy, blockchain, digital assets, OFiDCrypt, crypto community">
 	<meta name="author" content="Tokin">
 
 	<!-- Open Graph Meta Tags -->
-	<meta property="og:title" content="OFiDCrypt | Meet The OFiD Kid & Crew">
-	<meta property="og:description" content="Meet The OFiD Kid and explore the world with him! Get ready to join him on his Web3 adventures!">
+	<meta property="og:title" content="OFiDCrypt | Giddy's: Meet Baby Tokin">
+	<meta property="og:description" content="Meet Baby Tokim and explore the world with him! Get ready to join him on his Web3 adventures!">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofidkid-crew.webp">
 	<meta property="og:url" content="https://www.ofidcrypt.com/ofidkid">
 	<meta property="og:type" content="website">
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="OFiDCrypt | Meet The OFiD Kid & Crew">
-	<meta name="twitter:description" content="Meet The OFiD Kid and explore the world with him! Get ready to join him on his Web3 adventures!">
+	<meta name="twitter:title" content="OFiDCrypt | Giddy's: Meet Baby Tokin">
+	<meta name="twitter:description" content="Meet Baby Tokim and explore the world with him! Get ready to join him on his Web3 adventures!">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofidkid-crew.webp">
 	<meta name="twitter:url" content="https://www.ofidcrypt.com/ofidkid">
 
@@ -104,8 +104,8 @@
 			<ul class="links">
 				<li ><a href="index.html">Home</a></li>
 				<li><a href="explore.html">Services</a></li>
-				<li><a href="community.html">News & Blog</a></li>
-				<li><a href="pages/livestream.html">𝕏 Live Spaces</a></li>
+				<li><a href="community.html">News</a></li>
+				<li><a href="pages/livestream.html">Events</a></li>
 				<li class="active"><a href="ofidkid.html">OFiD Kid</a></li>
 				<li><a href="pages/about.html">About Us</a></li>
 			</ul>
@@ -216,13 +216,186 @@
 					</div>
 				</div>
 
+				<!-- TikTok Embed -  FEATURED-->
+				<div class="tiktok-videos-container">
+					<!-- Video 1 - TikTok Embed -->
+					<div class="tiktok-video-wrapper">
+						<header class="tiktok-header">
+							<h2>Giddy's: Legacy Tales</h2>
+						</header>
+						<div class="tiktok video main">
+							<blockquote class="tiktok-embed"
+								cite="https://www.tiktok.com/@Giddys_CA/video/7503769546809953542"
+								data-video-id="7503769546809953542" style="max-width: 605px;min-width: 325px;">
+								<section> <a target="_blank" title="@Giddys_CA"
+										href="https://www.tiktok.com/@Giddys_CA?refer=embed">@Giddys_CA</a>
+									Introducing:
+									GIDDY TALES
+								</section>
+							</blockquote>
+							<script async src="https://www.tiktok.com/embed.js"></script>
+						</div>
+					</div>
+				</div>
+
+				<!-- TikTok Embed - EPISODES - BLOCK 1-->
+				<div class="tiktok-videos-container-pair" id="giddy-tales">
+					<!-- First TikTok Embed -->
+					<div class="tiktok-video-wrapper" id="ep1">
+						<header class="tiktok-header">
+							<h2>Ep. 1: Rex's Sunny Day</h2>
+						</header>
+						<div class="tiktok video main">
+							<blockquote class="tiktok-embed"
+								cite="https://www.tiktok.com/@Giddys_CA/video/7503781058953891127"
+								data-video-id="7503781058953891127" style="max-width: 605px;min-width: 325px;">
+								<section> <a target="_blank" title="@Giddys_CA"
+										href="https://www.tiktok.com/@Giddys_CA?refer=embed">@Giddys_CA</a> GIDDY
+									TALES
+									🪄 Rex’s Sunny
+									Day ☀️ “Sometimes we need to take a moment to unwind; stop and take a breath” 😊
+									<a title="inspiration" target="_blank"
+										href="https://www.tiktok.com/tag/inspiration?refer=embed">#inspiration</a>
+									<a title="anxiety" target="_blank"
+										href="https://www.tiktok.com/tag/anxiety?refer=embed">#anxiety</a>
+									<a title="sunny" target="_blank"
+										href="https://www.tiktok.com/tag/sunny?refer=embed">#sunny</a> <a
+										title="Giddys_CA" target="_blank"
+										href="https://www.tiktok.com/tag/Giddys_CA?refer=embed">#Giddys_CA</a> <a
+										title="web3" target="_blank"
+										href="https://www.tiktok.com/tag/web3?refer=embed">#web3</a> <a title="crypto"
+										target="_blank" href="https://www.tiktok.com/tag/crypto?refer=embed">#crypto</a>
+									<a title="cute" target="_blank"
+										href="https://www.tiktok.com/tag/cute?refer=embed">#cute</a> <a
+										title="animation" target="_blank"
+										href="https://www.tiktok.com/tag/animation?refer=embed">#animation</a> <a
+										title="kidsoftiktok" target="_blank"
+										href="https://www.tiktok.com/tag/kidsoftiktok?refer=embed">#kidsoftiktok</a>
+									<a title="fyp" target="_blank"
+										href="https://www.tiktok.com/tag/fyp?refer=embed">#fyp</a> <a title="foryoupage"
+										target="_blank"
+										href="https://www.tiktok.com/tag/foryoupage?refer=embed">#foryoupage</a>
+									@OFiDCrypt
+									e𝕏P Web3™
+									@Linda-Marie Emmerson @Lillicity @DeFi Space <a target="_blank"
+										title="♬ [Animals and dishes] Cute BGM - Sound Owl"
+										href="https://www.tiktok.com/music/Animals-and-dishes-Cute-BGM-6817143279088306177?refer=embed">♬
+										[Animals and dishes] Cute BGM - Sound Owl</a>
+								</section>
+							</blockquote>
+						</div>
+					</div>
+
+					<!-- Second TikTok Embed -->
+					<div class="tiktok-video-wrapper" id="ep2">
+						<header class="tiktok-header">
+							<h2>Ep. 2: A Giddy Dream</h2>
+						</header>
+						<div class="tiktok video main">
+							<blockquote class="tiktok-embed"
+								cite="https://www.tiktok.com/@Giddys_CA/video/7504815396604644663"
+								data-video-id="7504815396604644663" style="max-width: 605px;min-width: 325px;">
+								<section> <a target="_blank" title="@Giddys_CA"
+										href="https://www.tiktok.com/@Giddys_CA?refer=embed">@Giddys_CA</a> GIDDY
+									TALES
+									# A Giddy Dream
+									😴⛅️
+									"Hard work may pose challenges but we push through them towards our goals!" ☺️
+									<a title="inspiration" target="_blank"
+										href="https://www.tiktok.com/tag/inspiration?refer=embed">#inspiration</a>
+									<a title="anxiety" target="_blank"
+										href="https://www.tiktok.com/tag/anxiety?refer=embed">#anxiety</a> <a
+										title="sunny" target="_blank"
+										href="https://www.tiktok.com/tag/sunny?refer=embed">#sunny</a> <a
+										title="Giddys_CA" target="_blank"
+										href="https://www.tiktok.com/tag/Giddys_CA?refer=embed">#Giddys_CA</a> <a
+										title="web3" target="_blank"
+										href="https://www.tiktok.com/tag/web3?refer=embed">#web3</a> <a title="crypto"
+										target="_blank" href="https://www.tiktok.com/tag/crypto?refer=embed">#crypto</a>
+									<a title="cute" target="_blank"
+										href="https://www.tiktok.com/tag/cute?refer=embed">#cute</a> <a
+										title="animation" target="_blank"
+										href="https://www.tiktok.com/tag/animation?refer=embed">#animation</a> <a
+										title="kidsoftiktok" target="_blank"
+										href="https://www.tiktok.com/tag/kidsoftiktok?refer=embed">#kidsoftiktok</a>
+									<a title="fyp" target="_blank"
+										href="https://www.tiktok.com/tag/fyp?refer=embed">#fyp</a> <a title="foryoupage"
+										target="_blank"
+										href="https://www.tiktok.com/tag/foryoupage?refer=embed">#foryoupage</a>
+									@OFiDCrypt e𝕏P Web3™
+									@Linda-Marie Emmerson @Lillicity @DeFi Space @Crypto Mason @TheCryptoChik
+									@Crypto
+									Vic <a target="_blank" title="♬ Dreaming - The Ting Tings"
+										href="https://www.tiktok.com/music/Dreaming-7488001262270941185?refer=embed">♬
+										Dreaming - The
+										Ting
+										Tings</a>
+								</section>
+							</blockquote>
+						</div>
+					</div>
+				</div>
+
+				<!-- TikTok Embed - EPISODES - BLOCK 2-->
+				<div class="tiktok-videos-container-pair" id="giddy-tales">
+					<!-- Third TikTok Embed -->
+					<div class="tiktok-video-wrapper" id="ep1">
+						<header class="tiktok-header">
+							<h2>Ep. 3: Buster Eyes His Prize</h2>
+						</header>
+						<div class="tiktok video main">
+							<blockquote class="tiktok-embed"
+								cite="https://www.tiktok.com/@Giddys_CA/video/7505305491837439238"
+								data-video-id="7505305491837439238" style="max-width: 605px;min-width: 325px;">
+								<section> <a target="_blank" title="@Giddys_CA"
+										href="https://www.tiktok.com/@Giddys_CA?refer=embed">@Giddys_CA</a> GIDDY
+									TALES
+									🪄 Buster Eyes
+									His Prize 🏆 &#34;We can focus on our own goals and collaboration without
+									fixating
+									solely on
+									competition&#34; 😊 <a title="inspiration" target="_blank"
+										href="https://www.tiktok.com/tag/inspiration?refer=embed">#inspiration</a>
+									<a title="anxiety" target="_blank"
+										href="https://www.tiktok.com/tag/anxiety?refer=embed">#anxiety</a> <a
+										title="motivate" target="_blank"
+										href="https://www.tiktok.com/tag/motivate?refer=embed">#motivate</a> <a
+										title="collaboration" target="_blank"
+										href="https://www.tiktok.com/tag/collaboration?refer=embed">#collaboration</a>
+									<a title="Giddys_CA" target="_blank"
+										href="https://www.tiktok.com/tag/Giddys_CA?refer=embed">#Giddys_CA</a> <a
+										title="web3" target="_blank"
+										href="https://www.tiktok.com/tag/web3?refer=embed">#web3</a> <a title="crypto"
+										target="_blank" href="https://www.tiktok.com/tag/crypto?refer=embed">#crypto</a>
+									<a title="cute" target="_blank"
+										href="https://www.tiktok.com/tag/cute?refer=embed">#cute</a> <a
+										title="animation" target="_blank"
+										href="https://www.tiktok.com/tag/animation?refer=embed">#animation</a> <a
+										title="kidsoftiktok" target="_blank"
+										href="https://www.tiktok.com/tag/kidsoftiktok?refer=embed">#kidsoftiktok</a>
+									<a title="fyp" target="_blank"
+										href="https://www.tiktok.com/tag/fyp?refer=embed">#fyp</a> <a title="foryoupage"
+										target="_blank"
+										href="https://www.tiktok.com/tag/foryoupage?refer=embed">#foryoupage</a>
+									@OFiDCrypt e𝕏P Web3™
+									@Linda-Marie Emmerson @Lillicity @DeFi Space @Crypto Mason @Crypto Vic
+									@TheCryptoChik @CNN <a target="_blank" title="♬ The Champion - Lux-Inspira"
+										href="https://www.tiktok.com/music/The-Champion-7086103923756402689?refer=embed">♬
+										The Champion
+										- Lux-Inspira</a>
+								</section>
+							</blockquote>
+						</div>
+					</div>
+				</div>
+
 				<!-- Community Links Table -->
 				<section class="community-links">
 					<table>
 						<!-- Ad Banner -->
 						<section id="socials-banner" class="ad-banner">
 							<div style="text-align: center;">
-								<img src="/assets/images/banner-ofid-crew.jpg" alt="Ad Banner"
+								<img src="/assets/images/banner-giddys-baby-tokin-social.jpg" alt="Giddy's Baby Tokin Social Banner"
 									style="max-width: 100%; height: auto;">
 							</div>
 						</section>
@@ -247,6 +420,17 @@
 								</td>
 								<td style="text-align: center; vertical-align: middle;">
 									<a href="https://www.tiktok.com/@Giddys_CA">@Giddys_CA</a>
+								</td>
+							</tr>
+							<tr>
+								<td style="text-align: center; vertical-align: middle;">
+									<a href="https://youtube.com/@ofidcrypt">
+										<img src="/assets/images/social-logo/youtube-bw-tp.png" alt="YouTube Logo"
+											style="max-width: 35%; height: auto; display: block; margin: auto;">
+									</a>
+								</td>
+								<td style="text-align: center; vertical-align: middle;">
+									<a href="https://youtube.com/@ofidcrypt">@OFiDCrypt</a>
 								</td>
 							</tr>
 						</tbody>
