--- a/pages/about.html
+++ b/pages/about.html
@@ -35,7 +35,7 @@
 		</script>
 
 	<!-- Meta Description (for SEO) -->
-	<title> Our Web3 Mission | About OFiDCrypt</title>
+	<title>Who Are OFiDCrypt?</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description"
@@ -44,7 +44,7 @@
 	<meta name="author" content="Tokin ⬢">
 
 	<!-- Open Graph Meta Tags -->
-	<meta property="og:title" content="Our Web3 Mission | About OFiDCrypt">
+	<meta property="og:title" content="Who Are OFiDCrypt?">
 	<meta property="og:description"
 		content="We can introduce you to the world of web3, leveraging tailored articles, live events, and simple partner apps as entry points. You can then choose to get crypto at your own pace and learn and grow with the community.">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofidcrypt-marketing.webp">
@@ -53,7 +53,7 @@
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Our Web3 Mission | About OFiDCrypt">
+	<meta name="twitter:title" content="Who Are OFiDCrypt?">
 	<meta name="twitter:description"
 		content="We can introduce you to the world of web3, leveraging tailored articles, live events, and simple partner apps as entry points. You can then choose to get crypto at your own pace and learn and grow with the community.">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofidcrypt-marketing.webp">
@@ -109,8 +109,8 @@
 			<ul class="links">
 				<li><a href="../index.html">Home</a></li>
 				<li><a href="../explore.html">Services</a></li>
-				<li><a href="../community.html">News & Blog</a></li>
-				<li><a href="livestream.html">𝕏 Live Spaces</a></li>
+				<li><a href="../community.html">News</a></li>
+				<li><a href="livestream.html">Events</a></li>
 				<li><a href="../ofidtales.html">Giddy's</a></li>
 				<li class="active"><a href="about.html">About Us</a></li>
 			</ul>
