--- a/promote.html
+++ b/promote.html
@@ -33,28 +33,28 @@
 		</script>
 
 	<!-- Meta Description (for SEO) -->
-	<title>OFiDCrypt | e𝕏P Promote Your Passion</title>
+	<title>OFiDCrypt | Marketing Services</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="description"
-		content="We're committed to fostering your growth within our token economy. Benefit as a token holder even if you're not a client!">
+		content="We're committed to fostering your growth within our token economy. Benefit as a token holder, or as a client!">
 	<meta name="keywords"
 		content="cryptocurrency, The OFiD Kid, The OFiD Crew, Buster, Giddy, blockchain, digital assets, OFiDCrypt, crypto community">
 	<meta name="author" content="Tokin">
 
 	<!-- Open Graph Meta Tags -->
-	<meta property="og:title" content="OFiDCrypt | e𝕏P Promote Your Passion">
+	<meta property="og:title" content="OFiDCrypt | Marketing Services">
 	<meta property="og:description"
-		content="We're committed to fostering your growth within our token economy. Benefit as a token holder even if you're not a client!">
+		content="We're committed to fostering your growth within our token economy. Benefit as a token holder, or as a client!">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofidcrypt-marketing.webp">
 	<meta property="og:url" content="https://www.ofidcrypt.com/promote">
 	<meta property="og:type" content="website">
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="OFiDCrypt | e𝕏P Promote Your Passion">
+	<meta name="twitter:title" content="OFiDCrypt | Marketing Services">
 	<meta name="twitter:description"
-		content="We're committed to fostering your growth within our token economy. Benefit as a token holder even if you're not a client!">
+		content="We're committed to fostering your growth within our token economy. Benefit as a token holder, or as a client!">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofidcrypt-marketing.webp">
 	<meta name="twitter:url" content="https://www.ofidcrypt.com/promote">
 
@@ -108,8 +108,8 @@
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
 				<li class="active"><a href="explore.html">Services</a></li>
-				<li><a href="community.html">News & Blog</a></li>
-				<li><a href="pages/livestream.html">𝕏 Live Spaces</a></li>
+				<li><a href="community.html">News</a></li>
+				<li><a href="pages/livestream.html">Events</a></li>
 				<li><a href="ofidtales.html">Giddy's</a></li>
 				<li><a href="pages/about.html">About Us</a></li>
 			</ul>
