--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -105,8 +105,8 @@
 						<ul class="links">
 							<li><a href="../index.html">Home</a></li>
 							<li><a href="../explore.html">Services</a></li>
-							<li><a href="../community.html">News & Blog</a></li>
-							<li><a href="livestream.html">𝕏 Live Spaces</a></li>
+							<li><a href="../community.html">News</a></li>
+							<li><a href="livestream.html">Events</a></li>
 							<li><a href="../ofidtales.html">Giddy's</a></li>
 							<li><a href="about.html">About Us</a></li>
 						</ul>
