Adjusted text fields on index.html and added logo_dobby02.png. Minor text edits to heading on ofidtales.html and removed auto scroll for character profiles.

--- a/index.html
+++ b/index.html
@@ -406,17 +406,14 @@
 							unlock exclusive savings on our marketing services and Giddy’s Goods when you set up your
 							first digital
 							wallet. Dive into our secure, in-house digital currency and experience the future of smart
-							spending.</p>
-
-						<p class="align-center">Need Help? </br><a href="#guide">Check Our Guides</a></p>
+							spending. Need Help?</br><a href="#guide"> Check Our Guides</a></p>
 
 						<p style="text-align: center;">
-							You only need <b>one thing</b>—and it's quick and free!
-							A wallet (think of it like a banking app). Optionally, we can help to get you started with
-							an exchange account (kind of like a crypto
-							bank account)—you'll need this when you want to cash out!
-							That’s it! You’re ready to easily swap your dollars for your first digital asset—just like
-							exchanging money for a vacation abroad!
+							All you need is <b>one thing</b>—a wallet (like a banking app). It's quick, free, and gets
+							you started fast.
+							Want to cash out later? We can help set up an exchange account (think crypto bank).
+							That’s it! You’re ready to swap dollars for your first digital asset—just like exchanging
+							currency for travel.
 						</p>
 					</header>
 
